force-app/main/default/objects/NCMT_RA_Work_Items__c/NCMT_RA_Work_Items__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_RA_WI_HelpPage</customHelpPage>
    <description>RA Work Items</description>
    <label>RA Work Items</label>
    <nameField>
        <displayFormat>RAWorkItem -{00000}</displayFormat>
        <label>RA Work Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RA Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>