force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Cost_Allocation_GSA__c.field-meta.xml
<CustomField>
    <fullName>Cost_Allocation_GSA__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cost Allocation: GSA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>