force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Cost_Range__c.field-meta.xml
<CustomField>
    <fullName>Cost_Range__c</fullName>
    <formula>&quot;$&quot; &amp; TEXT( Round(RA_WI_Lookup_Detail__r.Low__c * Work_Item_Phase__r.Project__r.Location_Multiplier_Washington_D_C_1_0__c,2) ) &amp; &quot; to $&quot; &amp; TEXT( Round(RA_WI_Lookup_Detail__r.High__c * Work_Item_Phase__r.Project__r.Location_Multiplier_Washington_D_C_1_0__c,2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Range(Location Adjusted)</label>
    <type>Text</type>
</CustomField>