force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Default_Lookup_Quantity_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Lookup_Quantity_SF__c</fullName>
    <formula>RA_WI_Lookup_Detail__r.Quantity_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Lookup Quantity SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>