force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/ECC_Shell_Parameter_Formula__c.field-meta.xml
<CustomField>
    <fullName>ECC_Shell_Parameter_Formula__c</fullName>
    <formula>GSA_Cost__c + (1+  Work_Item_Phase__r.Design_Contingency__c +  Work_Item_Phase__r.Home_Office_Overhead_Bond_Profit__c  +  Work_Item_Phase__r.Escalation_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECCA (Shell) / Parameter*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>