force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/ECCA__c.field-meta.xml
<CustomField>
    <fullName>ECCA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ECCA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>