force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/ECCA_Shell_Parameter__c.field-meta.xml
<CustomField>
    <fullName>ECCA_Shell_Parameter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ECCA (Shell) / Parameter</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>