force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/GSA_Cost__c.field-meta.xml
<CustomField>
    <fullName>GSA_Cost__c</fullName>
    <formula>ROUND((((Total_Cost__c *(1+ Phase_Condition_Percent__c)) * Cost_Allocation_GSA__c)-  GSAPkg_Cost__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSA Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>