force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/GSA_Costs__c.field-meta.xml
<CustomField>
    <fullName>GSA_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GSA Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>