force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/GSAPkg_Cost__c.field-meta.xml
<CustomField>
    <fullName>GSAPkg_Cost__c</fullName>
    <formula>ROUND(((Total_Cost__c *(1+ Phase_Condition_Percent__c))  * Cost_Allocation_GSA__c * RA_WI_Lookup_Detail__r.Parking__c),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSAPkg Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>