force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Housing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Housing Plan</label>
    <referenceTo>NCMT_Housing_Plan__c</referenceTo>
    <relationshipLabel>RA Work Items</relationshipLabel>
    <relationshipName>RA_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>