force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Include_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Include_Work_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Work Item</label>
    <type>Checkbox</type>
</CustomField>