force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Repair/Replace Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>