force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Phase_Condition_Percent__c.field-meta.xml
<CustomField>
    <fullName>Phase_Condition_Percent__c</fullName>
    <formula>IF(TEXT(Work_Item_Phase__r.Work_Conditions__c) == &apos;Vacant work area: clear path travel&apos;,
if(RA_WI_Lookup_Detail__r.Flag1__c == 2, 0.02,0) ,
IF(TEXT(Work_Item_Phase__r.Work_Conditions__c) == &apos;Vacant work area: difficult path travel&apos;,if(RA_WI_Lookup_Detail__r.Flag1__c == 1,0.01,if(RA_WI_Lookup_Detail__r.Flag1__c == 2,0.1,0)),
IF(TEXT(Work_Item_Phase__r.Work_Conditions__c) == &apos;Partially vacant work area&apos;,if(RA_WI_Lookup_Detail__r.Flag1__c == 1,0.02,if(RA_WI_Lookup_Detail__r.Flag1__c == 2,0.2,0)),
IF(TEXT(Work_Item_Phase__r.Work_Conditions__c) == &apos;Fully occupied&apos;,if(RA_WI_Lookup_Detail__r.Flag1__c == 1,0.05,if(RA_WI_Lookup_Detail__r.Flag1__c == 2,0.35,0)),0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Condition Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>