force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Quantity_SF__c.field-meta.xml
<CustomField>
    <fullName>Quantity_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>