force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/RA_WI_Lookup_Detail__c.field-meta.xml
<CustomField>
    <fullName>RA_WI_Lookup_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RA WI Lookup Detail</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) OR (3 AND 4))</booleanFilter>
        <filterItems>
            <field>$Source.Work_Item_Type__c</field>
            <operation>equals</operation>
            <value>Repair</value>
        </filterItems>
        <filterItems>
            <field>NCMT_RA_WI_Lookup_Details__c.Work_Item_Type__c</field>
            <operation>equals</operation>
            <value>Repair</value>
        </filterItems>
        <filterItems>
            <field>$Source.Work_Item_Type__c</field>
            <operation>equals</operation>
            <value>Replace</value>
        </filterItems>
        <filterItems>
            <field>NCMT_RA_WI_Lookup_Details__c.Work_Item_Type__c</field>
            <operation>equals</operation>
            <value>Replace</value>
        </filterItems>
        <infoMessage>Please enter the Work Item Cost Category and click &apos;Go&apos; button to see the list of available Lookup RA Details.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NCMT_RA_WI_Lookup_Details__c</referenceTo>
    <relationshipLabel>RA Work Items</relationshipLabel>
    <relationshipName>RA_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>