force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Tenant_Cost_Distribution_Tenant_BA80__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Cost_Distribution_Tenant_BA80__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenant Cost Distribution : Tenant  BA80</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>