force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Tenant_Cost_Distribution_TenantAmortized__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Cost_Distribution_TenantAmortized__c</fullName>
    <formula>IF( Cost_Allocation_Tenant__c == 0, 0, (1- Tenant_Cost_Distribution_Tenant_BA80__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Cost Distribution-TenantAmortized</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>