force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Tenant_RWA_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tenant_RWA_Cost__c</fullName>
    <formula>ROUND(( (Total_Cost__c *(1+ Phase_Condition_Percent__c) )*  Cost_Allocation_Tenant__c *  Tenant_Cost_Distribution_Tenant_BA80__c),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant RWA Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>