force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Total_Cost_Including_Phasing__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Including_Phasing__c</fullName>
    <formula>Total_Cost__c *(1+ Phase_Condition_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Including Phasing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>