force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Total_Costs_Including_Phasing__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs_Including_Phasing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Costs Including Phasing</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>