force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Work_Item_Category_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Category_Sub_Type__c</fullName>
    <formula>RA_WI_Lookup_Detail__r.WI_Category_Sub_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Category Sub Type</label>
    <type>Text</type>
</CustomField>