force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Work_Item_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Category_Type__c</fullName>
    <formula>RA_WI_Lookup_Detail__r.Work_Item_Category_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Category Type</label>
    <type>Text</type>
</CustomField>