force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Work_Item_Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Cost_Category__c</fullName>
    <formula>Work_Item_Type_ID__r.Cost_Category_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Cost Category</label>
    <type>Text</type>
</CustomField>