force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Work_Item_Phase__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Phase__c</fullName>
    <label>Work Item Phase</label>
    <referenceTo>NCMT_RA_Phasing__c</referenceTo>
    <relationshipLabel>RA Work Items</relationshipLabel>
    <relationshipName>RA_Work_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>