force-app/main/default/objects/NCMT_RA_Work_Items__c/fields/Work_Item_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Type_ID__c</fullName>
    <label>Project Cost Summary ID</label>
    <referenceTo>NCMT_Project_Cost_Summary__c</referenceTo>
    <relationshipLabel>RA Work Items</relationshipLabel>
    <relationshipName>RA_Work_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>