force-app/main/default/objects/NCMT_RA_Work_Items__c/recordTypes/RA_Work_Items.recordType-meta.xml
<RecordType>
    <fullName>RA_Work_Items</fullName>
    <active>true</active>
    <description>RA Work Items</description>
    <label>RA Work Items</label>
</RecordType>