force-app/main/default/objects/NCMT_RA_Work_Items__c/recordTypes/RA_Work_Items_Initial_Setup.recordType-meta.xml
<RecordType>
    <fullName>RA_Work_Items_Initial_Setup</fullName>
    <active>false</active>
    <description>RA Work Items Initial Setup</description>
    <label>RA Work Items Initial Setup</label>
</RecordType>