force-app/main/default/objects/NCMT_RA_Work_Items__c/recordTypes/RA_Work_Items_Space_Plan.recordType-meta.xml
<RecordType>
    <fullName>RA_Work_Items_Space_Plan</fullName>
    <active>true</active>
    <label>RA Work Items Space Plan</label>
</RecordType>