force-app/main/default/objects/NCMT_RA_Work_Items__c/validationRules/Check_for_Proj_Status_to_lock_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Proj_Status_to_lock_record</fullName>
    <active>true</active>
    <description>If project record is submitted for approval, then it should be locked from editing.</description>
    <errorConditionFormula>(Work_Item_Type_ID__r.Project_Name__r.IsApprovalProcess__c == True &amp;&amp; TEXT(Work_Item_Type_ID__r.Project_Name__r.Project_Status__c) != &apos;Draft&apos;)</errorConditionFormula>
    <errorMessage>The record you are trying to edit has been locked.</errorMessage>
</ValidationRule>