force-app/main/default/objects/NCMT_RA_Work_Items__c/validationRules/Check_for_Project_Cost_Summary_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Project_Cost_Summary_ID</fullName>
    <active>true</active>
    <description>Check  Work Item category related to project cost category</description>
    <errorConditionFormula>IF(Project_Name__c !=  Work_Item_Type_ID__r.Project_Name__r.Name , true, false)</errorConditionFormula>
    <errorDisplayField>Work_Item_Type_ID__c</errorDisplayField>
    <errorMessage>Choose appropriate NCMT Project for this work item</errorMessage>
</ValidationRule>