force-app/main/default/objects/NCMT_RA_Work_Items__c/validationRules/Check_for_Project_on_RA_Phasing.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Project_on_RA_Phasing</fullName>
    <active>true</active>
    <description>Check for project name related to RA Phasing records</description>
    <errorConditionFormula>IF( Project_Name__c != Work_Item_Phase__r.Project__r.Name,  true, false)</errorConditionFormula>
    <errorDisplayField>Work_Item_Phase__c</errorDisplayField>
    <errorMessage>Enter Work Item Phase related to NCMT Project</errorMessage>
</ValidationRule>