force-app/main/default/objects/NCMT_RA_Work_Items__c/validationRules/Check_for_Rate_within_Cost_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Rate_within_Cost_Range</fullName>
    <active>true</active>
    <description>Check for Rate within Cost range</description>
    <errorConditionFormula>AND((Rate__c != PRIORVALUE(Rate__c )),
OR((Rate__c &lt; (RA_WI_Lookup_Detail__r.Low__c * Work_Item_Phase__r.Project__r.Location_Multiplier_Washington_D_C_1_0__c)), (Rate__c &gt; (RA_WI_Lookup_Detail__r.High__c * Work_Item_Phase__r.Project__r.Location_Multiplier_Washington_D_C_1_0__c))), ISBLANK(Notes__c))</errorConditionFormula>
    <errorMessage>Please provide Notes for Overriding Work Item Rate outside specified Cost Range</errorMessage>
</ValidationRule>