force-app/main/default/objects/NCMT_RA_Work_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Work_Item_Type_ID__c</columns>
    <columns>Work_Item_Category__c</columns>
    <columns>Work_Item_Category_Type__c</columns>
    <columns>RA_WI_Lookup_Detail__c</columns>
    <columns>Work_Item_Category_Sub_Type__c</columns>
    <columns>Work_Item_Description__c</columns>
    <columns>Quantity_SF__c</columns>
    <columns>Rate__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>GSA_Cost__c</columns>
    <columns>GSAPkg_Cost__c</columns>
    <columns>Work_Item_Type__c</columns>
    <columns>Work_Item_Phase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>